some fixes in expression generations